<resources>
    <string name="app_name">SOSapplication</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu bar icons -->
    <string name="menu_home">Home</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <!-- Greate Grooup Activity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_contacts_add_new">Add new</string>
    <string name="button_contacts_remove">Remove</string>
    <string name="new_group_name">Name your group</string>
    <string name="button_create_group_save">Save group</string>

    <!-- Login placeholders -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_register">Register</string>
    <string name="login_fail">Login failed</string>
    <string name="login_verify">Please verify your email</string>

    <!-- Register placeholders -->
    <string name="register_username">Username</string>
    <string name="not_valid_email">Please enter a valid email</string>
    <string name="no_username">Please enter a username</string>
    <string name="no_password">Please enter a password</string>
    <string name="registration_fail">Registration failed</string>

    <!-- FCM service placeholders -->
    <string name="msg_token_fmt">Herro</string>
    <string name="default_notification_channel_id">default notificantion channel id</string>
    <string name="fcm_message">this is fcm message</string>
    <string name="notis_sos">SOS</string>
    <string name="notis_call_for_help">Call for help!!</string>
    <string name="notis_sos_channel">SOS channel</string>
    <string name="comet_app_id">150750f6f6d76d9</string>
    <string name="emergency_service">"Call emergency services, I'm In trouble, "</string>
    <string name="create_new_group">Create new group</string>

</resources>
